--- a/config/locales/pt-BR/devise.yml
+++ b/config/locales/pt-BR/devise.yml
@@ -54,5 +54,5 @@ pt-BR:
       not_found: "não encontrado"
       not_locked: "não foi bloqueado"
       not_saved:
-        one: "Não foi possível salvar %{resource}: 1 erro"
-        other: "Não foi possível salvar %{resource}: %{count} erros."
+        one: "Não foi possível se cadastrar: 1 erro."
+        other: "Não foi possível se cadastrar: %{count} erros."
